kube/deploy/vm/ad/_deps/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "vm-ad"
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    vm.home.arpa/windows: "ad"
